--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </svg>
                         </a>
 
-                        <a class="socialicon github" href="https://github.com/asisasissah" target="https://github.com/asisasissah" rel="author">
+                        <a class="socialicon github" href="https://github.com" target="https://github.com" rel="author">
                             <!-- SVG code for Github icon -->
                             <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                                 <!-- body -->
